# page_loader

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
page_loader/: __init__.py  assets.py  cli.py  cli_parser.py  content_checker.py  content_downloader.py  download.py  img_downloader.py  logging_settings.py  page_downloader.py  resources.py  storage.py  url.py  url_converter.py  writer.py
page_loader/scripts/: __init__.py  page_loader.py
tests/: test_page_loader.py
tests/fixtures/: expected.html  expected_result.html  raw.html  script.js  styles.css
