[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["sudobooo <marsdoghelena@gmail.com>"]
packages = [
  { include = "page_loader" },
]
classifiers = [
    "Topic :: Education",
    "Programming Language :: Python :: 3.8",
    "Topic :: Internet :: WWW/HTTP"
]
repository = "https://github.com/sudobooo/python-project-lvl3"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.27.1"
beautifulsoup4 = "^4.11.1"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
requests-mock = "^1.9.3"

[tool.poetry.scripts]
page-loader = "page_loader.scripts.page_loader:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
